--- a/inex.html
+++ b/inex.html
@@ -7,11 +7,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https: //fonts.googleapis.com/css2? family= Roboto:wght@500;700;900 & display=swap" rel="stylesheet">
+<link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header"></header>
+    <div class="wrapper">
+    <header class="header">
+       <nav class="nav">
+        <div class="logo">
+         <img src="img/WebStudio.jpg" alt="logo">
+       </div>
+          <ul class="header-nav-list">
+            <li><a href="">Студія</a></li>
+            <li><a href="">Портфоліо</a></li>
+            <li><a href="">Контакти</a></li>
+          </ul>
+          <ul class="header-nav-contacts">
+            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="+38 096 111 11 11">+38 096 111 11 11</a></li>
+          </ul>
+       </nav>
+    </header>
     <main class="main"></main>
     <footer class="footer"></footer>
+    </div>
 </body>
 </html>
