--- a/inex.html
+++ b/inex.html
@@ -53,7 +53,7 @@
           <ul class="adantages-list">
             <li class="list">
               <div class="card-logo">
-                <svg class="svg">
+                <svg class="icon">
                   <use href="/img/icons.svg#antena"></use>
                 </svg>
               </div>
@@ -66,7 +66,7 @@
 
             <li class="list">
               <div class="card-logo">
-                <svg class="svg">
+                <svg class="icon">
                   <use href="/img/icons.svg#clock"></use>
                 </svg>
               </div>
@@ -79,7 +79,7 @@
 
             <li class="list">
               <div class="card-logo">
-                <svg class="svg">
+                <svg class="icon">
                   <use href="/img/icons.svg#diagrama"></use>
                 </svg>
               </div>
@@ -91,7 +91,7 @@
 
             <li class="list">
               <div class="card-logo">
-                <svg class="svg">
+                <svg class="icon">
                   <use href="/img/icons.svg#astronaut"></use>
                 </svg>
               </div>
